# homeaudiolib

./: .gitignore  CMakeLists.txt  compile.sh  library.cpp  library.h
include/: HAAudioBuffer.h  HAAudioIO.h
src/: AudioBuffer.cpp  AudioIO.cpp
